Remove gradle generated files and allow IntelliJ to generate them based on project layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Ignore .gradle sub-directory
 .gradle/
+
+
+# Ignore each IntelliJ project module as each will be stored in
+# it's own Git repository 
+libs/
+core/
+web/
+
